--- a/src/app/components/commits/commits.component.html
+++ b/src/app/components/commits/commits.component.html
@@ -1,1 +1,26 @@
-<p>commits works!</p>
+<h3 class="text-secondary">Commits List</h3>
+<hr>
+
+<table class="table table-hover">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Author</th>
+        <th scope="col">Message</th>
+        <th scope="col">Date</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let commit of commits; let i = index">
+        <th scope="row">{{ i +1  }}</th>
+        <td>
+            <img [src]="commit.author.avatar_url" class="img-author" width="30" height="30" alt="Author Image"> 
+            {{ commit.author.login }}
+        </td>
+        <td class="text-secondary">{{ commit.commit.message }}</td>
+        <td>{{ commit.commit.author.date | date:'medium' }}</td>
+      </tr>
+    </tbody>
+  </table>
+
+  
