--- a/src/app/components/shared/loading/loading.component.html
+++ b/src/app/components/shared/loading/loading.component.html
@@ -1,1 +1,5 @@
-<p>loading works!</p>
+<div class="d-flex justify-content-center animated fadeIn">
+    <div class="spinner-border loading" role="status">
+      <span class="sr-only">Loading...</span>
+    </div>
+</div>
