--- a/src/app/components/commits/commits.component.html
+++ b/src/app/components/commits/commits.component.html
@@ -1,5 +1,25 @@
 <div class="animated fadeIn">
-  <h3 class="text-secondary">Commits List</h3>
+
+  <div class="d-flex flex-wrap">
+    <h3 class="text-secondary">Commits List</h3>
+    
+    <div class="search-form">
+      <form class="my-2 my-lg-0 ">
+        <input 
+         #searchTerm 
+         class="form-control mr-sm-2" 
+         (keyup)="search(searchTerm.value)" 
+         (keydown)="checkEnter($event)"
+         type="search" 
+         placeholder="Search" 
+         aria-label="Search"
+         >
+        <!-- <button onclick="search()" class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</button> -->
+      </form>
+
+    </div>
+    
+  </div>
   <hr>
   
   <app-loading *ngIf="loading"></app-loading>
@@ -14,7 +34,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let commit of commits; let i = index">
+        <tr *ngFor="let commit of searchCommits; let i = index">
           <th scope="row">{{ i +1  }}</th>
           <td>
               <img [src]="commit.author.avatar_url" class="img-author" width="30" height="30" alt="Author Image"> 
