--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron jumbotron-fluid animated fadeIn">
     <div class="container">
       <h1 class="display-4">Commits App</h1>
-      <p class="lead">This app shows the commit history for this project.</p>
+      <p class="lead">This app shows the commit history for this project. Navigate to Commits page (using the navbar) to see the commits.</p>
     </div>
 </div>
